# Continous-Care-Portal

./: .env.example  .gitignore  DEMO_SCRIPT.md  README.md  package.json  render.yaml  vercel.json
backend/: .gitignore  audit.db  pyproject.toml  requirements.txt  test_groq.py
backend/app/: agents.py  archivist.py  audit.py  cardio_coordination.py  cardio_orders.py  cardio_pathway.py  cardio_routes.py  deidentify.py  export.py  grounding.py  guidelines.py  icd10.py  icd10_reference.json  main.py  models.py  orchestrator.py  test_archivist.py  test_audit.py  test_cardio_orders.py  test_cardio_pathway.py  test_cardio_routes.py  test_chat.py  test_deidentify.py  test_export.py  test_grounding.py  test_guidelines.py  test_main.py  test_orchestrator.py  test_pharmacology.py
cardilogy_folder/: README_INTEGRATION.md  main_py_integration.patch
cardilogy_folder/backend/app/: cardiology_guidelines.json  test_cardio_coordination.py
cardilogy_folder/specs/: CARDIOLOGY_PRD.md
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DESIGN_SYSTEM.md  PRODUCT_MANIFEST.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: ClinicalBoard.jsx  main.jsx  styles.css
frontend/src/components/: ArchivistPanel.tsx  AuditTrail.tsx  Background.tsx  Consensus.tsx  EvidenceChain.tsx  Footer.tsx  GroundingValidation.tsx  Hero.tsx  JudgeModeToggle.tsx  PatientOverview.tsx  ReviewWorkspace.tsx  SectionHeader.tsx  SpecialistBoard.tsx  Transparency.tsx  TrendCard.tsx
frontend/src/data/: clinical.ts
specs/: CARDIOLOGY_TDD.md  CCP_PRD.md  CCP_TDD.md  ClinicalBoard.jsx
(+95 files in other folders)
